force-app/main/default/objects/PurchaseOpportunity__c/PurchaseOpportunity__c.object-meta.xml
<CustomObject>
    <label>買取商談</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>買取商談No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>