force-app/main/default/objects/PurchaseOpportunity__c/fields/ABC__c.field-meta.xml
<CustomField>
    <fullName>ABC__c</fullName>
    <description>買取受付から買取商談を作成している場合にリユース事業部内での案件区分を表示</description>
    <formula>TEXT(Case__r.VehicleClassification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABC区分</label>
    <type>Text</type>
</CustomField>