force-app/main/default/objects/PurchaseOpportunity__c/fields/Account_Experience__c.field-meta.xml
<CustomField>
    <fullName>Account_Experience__c</fullName>
    <description>買取実績の仕入先名を表示、買取実績が紐づかないと表示されない</description>
    <formula>PurchaseExperience__r.Account__c</formula>
    <label>仕入先</label>
    <type>Text</type>
</CustomField>