force-app/main/default/objects/PurchaseOpportunity__c/fields/AccountSegment__c.field-meta.xml
<CustomField>
    <fullName>AccountSegment__c</fullName>
    <formula>IF ( IsCallCenter__c ,
&apos;リユース&apos;,
TEXT( Account__r.Segment__c )
)</formula>
    <label>取引先セグメント</label>
    <type>Text</type>
</CustomField>