force-app/main/default/objects/PurchaseOpportunity__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <formula>TEXT(Account__r.TradeType__c )</formula>
    <label>取引先種別</label>
    <type>Text</type>
</CustomField>