force-app/main/default/objects/PurchaseOpportunity__c/fields/Adjusted_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Instructions__c</fullName>
    <description>販売で使用</description>
    <label>調整指示内容</label>
    <type>TextArea</type>
</CustomField>