force-app/main/default/objects/PurchaseOpportunity__c/fields/AfterDocuments_Free__c.field-meta.xml
<CustomField>
    <fullName>AfterDocuments_Free__c</fullName>
    <description>現在使用していない</description>
    <label>後処理備考</label>
    <type>TextArea</type>
</CustomField>