force-app/main/default/objects/PurchaseOpportunity__c/fields/AggregationDate__c.field-meta.xml
<CustomField>
    <fullName>AggregationDate__c</fullName>
    <description>システム項目</description>
    <formula>IF( ISBLANK( AssessmentDate__c ) , PurchaseDate__c , AssessmentDate__c )</formula>
    <label>集計基準日</label>
    <type>Date</type>
</CustomField>