force-app/main/default/objects/PurchaseOpportunity__c/fields/ai_assessment_score__c.field-meta.xml
<CustomField>
    <fullName>ai_assessment_score__c</fullName>
    <label>AI査定評価点</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4.5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3.5</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>***</fullName>
            </value>
            <value>
                <fullName>データ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>