force-app/main/default/objects/PurchaseOpportunity__c/fields/AiAssessmentSync__c.field-meta.xml
<CustomField>
    <fullName>AiAssessmentSync__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI査定連携</label>
    <referenceTo>AiAssessmentSync__c</referenceTo>
    <relationshipLabel>買取商談</relationshipLabel>
    <relationshipName>PurchaseOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>