force-app/main/default/objects/PurchaseOpportunity__c/fields/alert_memo__c.field-meta.xml
<CustomField>
    <fullName>alert_memo__c</fullName>
    <description>出品情報タブに表示、出品時の警告設定を入力する</description>
    <label>警告設定</label>
    <type>TextArea</type>
</CustomField>