force-app/main/default/objects/PurchaseOpportunity__c/fields/AntennaShop__c.field-meta.xml
<CustomField>
    <fullName>AntennaShop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>引取依頼時に搬入先の業者がアンテナショップとして対応してくれることになった場合にチェックを付ける</description>
    <label>アンテナ対応　★</label>
    <type>Checkbox</type>
</CustomField>