force-app/main/default/objects/PurchaseOpportunity__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>商談・提示金額の相談者/決裁した人を選択する　※決裁者無しは空白</description>
    <inlineHelpText>商談・提示金額の相談者/決裁した人を選択してください。　※決裁者無しは空白</inlineHelpText>
    <label>決裁者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunityApprover</relationshipName>
    <type>Lookup</type>
</CustomField>