force-app/main/default/objects/PurchaseOpportunity__c/fields/araritekeisan__c.field-meta.xml
<CustomField>
    <fullName>araritekeisan__c</fullName>
    <description>OBICに売りが入るまでに、営業が給料計算などで使用したい場合に手計算した粗利を入力する</description>
    <inlineHelpText>売却時、粗利を手計算にて入力してください</inlineHelpText>
    <label>粗利（手計算）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>