force-app/main/default/objects/PurchaseOpportunity__c/fields/Arrival_date_retail__c.field-meta.xml
<CustomField>
    <fullName>Arrival_date_retail__c</fullName>
    <description>ソコリテが使用。山本</description>
    <label>入庫日（ソコリテ）</label>
    <type>Date</type>
</CustomField>