force-app/main/default/objects/PurchaseOpportunity__c/fields/ArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>ArrivalDate__c</fullName>
    <description>dataspiderで連携</description>
    <label>入出庫日</label>
    <type>Date</type>
</CustomField>