force-app/main/default/objects/PurchaseOpportunity__c/fields/ArrivalLocation__c.field-meta.xml
<CustomField>
    <fullName>ArrivalLocation__c</fullName>
    <description>dataspiderで連携</description>
    <label>入出庫場所</label>
    <length>50</length>
    <type>Text</type>
</CustomField>