force-app/main/default/objects/PurchaseOpportunity__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>査定表</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>買取商談</relationshipLabel>
    <relationshipName>Assessment_PurchaseOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>