force-app/main/default/objects/PurchaseOpportunity__c/fields/Assessment_Kammishimohannki__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Kammishimohannki__c</fullName>
    <description>査定日の月が4以上9以下の場合は上半期、それ以外は下半期</description>
    <formula>IF(ISNULL(MONTH ( AssessmentDate__c  ) ) ,NULL,

IF ( MONTH ( AssessmentDate__c ) &gt;= 4 &amp;&amp; MONTH ( AssessmentDate__c  ) &lt;= 9 , &quot;上半期&quot;, &quot;下半期&quot; )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>削除予定_査定日上下半期判断</label>
    <type>Text</type>
</CustomField>