force-app/main/default/objects/PurchaseOpportunity__c/fields/Assessment_outside_memo__c.field-meta.xml
<CustomField>
    <fullName>Assessment_outside_memo__c</fullName>
    <description>社外共有用査定表に表示する場合のみ使用</description>
    <inlineHelpText>社外共有用査定表に表示する場合のみ使用</inlineHelpText>
    <label>社外共有用査定表メモ</label>
    <type>TextArea</type>
</CustomField>