force-app/main/default/objects/PurchaseOpportunity__c/fields/AssessmentCount__c.field-meta.xml
<CustomField>
    <fullName>AssessmentCount__c</fullName>
    <formula>IF (  ISBLANK(AssessmentDate__c), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>査定カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>