force-app/main/default/objects/PurchaseOpportunity__c/fields/AssessmentDate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentDate__c</fullName>
    <inlineHelpText>未入力でフェーズが保留の時、当日が自動的にセットされます。</inlineHelpText>
    <label>査定日</label>
    <type>Date</type>
</CustomField>