force-app/main/default/objects/PurchaseOpportunity__c/fields/AssessmentMethod__c.field-meta.xml
<CustomField>
    <fullName>AssessmentMethod__c</fullName>
    <description>現車査定、データ査定</description>
    <inlineHelpText>メール・ライン・FAX・口頭など現車を確認していない査定の場合は、データ査定を選択</inlineHelpText>
    <label>査定方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>現車査定</fullName>
                <default>true</default>
                <label>現車査定</label>
            </value>
            <value>
                <fullName>データ査定</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>