force-app/main/default/objects/PurchaseOpportunity__c/fields/AssessmentMonthly__c.field-meta.xml
<CustomField>
    <fullName>AssessmentMonthly__c</fullName>
    <formula>MONTH(AssessmentDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>査定集計月度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>