force-app/main/default/objects/PurchaseOpportunity__c/fields/AssessmentSectionMemo__c.field-meta.xml
<CustomField>
    <fullName>AssessmentSectionMemo__c</fullName>
    <inlineHelpText>査定課の記入欄。記入者は日付と名前を記入。</inlineHelpText>
    <label>査定課メモ</label>
    <type>TextArea</type>
</CustomField>