force-app/main/default/objects/PurchaseOpportunity__c/fields/AssessmentSectionRequest__c.field-meta.xml
<CustomField>
    <fullName>AssessmentSectionRequest__c</fullName>
    <inlineHelpText>査定課に依頼する案件は依頼内容を選択</inlineHelpText>
    <label>査定課依頼</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>値段出しのみ</fullName>
            </value>
            <value>
                <fullName>値段出しと提示</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>