force-app/main/default/objects/PurchaseOpportunity__c/fields/AssessmentUser__c.field-meta.xml
<CustomField>
    <fullName>AssessmentUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>査定を依頼した場合に入力します。
未入力の場合は自動的に所有者がセットされます。</inlineHelpText>
    <label>査定担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AssessmentUser</relationshipName>
    <type>Lookup</type>
</CustomField>