force-app/main/default/objects/PurchaseOpportunity__c/fields/auc_area__c.field-meta.xml
<CustomField>
    <fullName>auc_area__c</fullName>
    <label>出品先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ライブ</fullName>
            </value>
            <value>
                <fullName>入札会</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>