force-app/main/default/objects/PurchaseOpportunity__c/fields/auc_sprice__c.field-meta.xml
<CustomField>
    <fullName>auc_sprice__c</fullName>
    <description>出品情報タブに表示される、営業が入力する、入力した情報はオークションサイトに連携される</description>
    <label>ライブ開始価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>