force-app/main/default/objects/PurchaseOpportunity__c/fields/Auction_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Auction_Quotes__c</fullName>
    <description>佐野</description>
    <label>オークション相場</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>