force-app/main/default/objects/PurchaseOpportunity__c/fields/AuctionListingDate__c.field-meta.xml
<CustomField>
    <fullName>AuctionListingDate__c</fullName>
    <description>引取依頼作成画面で表示、ゼロ連携をして引取依頼を投げる際にオークション開催日を情報提供する必要があるため</description>
    <label>オークション開催日</label>
    <type>Date</type>
</CustomField>