force-app/main/default/objects/PurchaseOpportunity__c/fields/Authorizer__c.field-meta.xml
<CustomField>
    <fullName>Authorizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>書類管理依頼で、ゲントの発行申請を出した際に承認者を入力する　※以前までは車庫申請の場合でも使用</description>
    <label>承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Authorizer</relationshipName>
    <type>Lookup</type>
</CustomField>