force-app/main/default/objects/PurchaseOpportunity__c/fields/AutomobileInspectionApplication_Approved__c.field-meta.xml
<CustomField>
    <fullName>AutomobileInspectionApplication_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ゲント申請が出た際に承認者がチェックを付ける</description>
    <label>現在登録申請承認済み</label>
    <type>Checkbox</type>
</CustomField>