force-app/main/default/objects/PurchaseOpportunity__c/fields/Automobiletaxrefund__c.field-meta.xml
<CustomField>
    <fullName>Automobiletaxrefund__c</fullName>
    <description>自動車税還付する、しない、還付あれば還付を選択する</description>
    <label>自動車税還付</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>還付する</fullName>
            </value>
            <value>
                <fullName>還付しない</fullName>
            </value>
            <value>
                <fullName>還付書類あれば還付</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>