force-app/main/default/objects/PurchaseOpportunity__c/fields/AvailableDate__c.field-meta.xml
<CustomField>
    <fullName>AvailableDate__c</fullName>
    <description>山本</description>
    <label>出品OK日</label>
    <type>Date</type>
</CustomField>