force-app/main/default/objects/PurchaseOpportunity__c/fields/Back_order__c.field-meta.xml
<CustomField>
    <fullName>Back_order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>佐野
修理パーツがバックオーダーの場合にチェック</description>
    <inlineHelpText>パーツの入荷が未定の案件はこちらにチェックを入れてください。</inlineHelpText>
    <label>パーツ バックオーダー</label>
    <type>Checkbox</type>
</CustomField>