force-app/main/default/objects/PurchaseOpportunity__c/fields/BidAmout__c.field-meta.xml
<CustomField>
    <fullName>BidAmout__c</fullName>
    <description>海外販売で使用</description>
    <label>落札金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>