force-app/main/default/objects/PurchaseOpportunity__c/fields/bit_category__c.field-meta.xml
<CustomField>
    <fullName>bit_category__c</fullName>
    <label>入札金額種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>はなまる金額</fullName>
            </value>
            <value>
                <fullName>連携金額</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>