force-app/main/default/objects/PurchaseOpportunity__c/fields/bit_ranking__c.field-meta.xml
<CustomField>
    <fullName>bit_ranking__c</fullName>
    <label>入札順位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1位</fullName>
            </value>
            <value>
                <fullName>2位</fullName>
            </value>
            <value>
                <fullName>3位</fullName>
            </value>
            <value>
                <fullName>4位</fullName>
            </value>
            <value>
                <fullName>5位</fullName>
            </value>
            <value>
                <fullName>6位以下</fullName>
            </value>
            <value>
                <fullName>4位以下</fullName>
                <isActive>false</isActive>
                <label>4位以下</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>