force-app/main/default/objects/PurchaseOpportunity__c/fields/bit_timelimit__c.field-meta.xml
<CustomField>
    <fullName>bit_timelimit__c</fullName>
    <description>牟田本部長より依頼で作成。ヤナセの買取商談作成時に大阪支店営業サポートが入力する。山本</description>
    <label>入札期限</label>
    <type>DateTime</type>
</CustomField>