force-app/main/default/objects/PurchaseOpportunity__c/fields/BranchName__c.field-meta.xml
<CustomField>
    <fullName>BranchName__c</fullName>
    <description>買取商談所有者の支店・部署を表示。山本</description>
    <formula>IF( CONTAINS(Role__c , &quot;マネージャ&quot;), SUBSTITUTE(Role__c, &quot;マネージャ&quot;,&quot;&quot;) ,
IF( CONTAINS(Role__c , &quot;アルバイト&quot;), SUBSTITUTE(Role__c, &quot;アルバイト&quot;,&quot;&quot;) ,
IF(  CONTAINS(Role__c , &quot;エリア&quot;),TEXT( Owner:User.Base__c ),
Role__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>支店名</label>
    <type>Text</type>
</CustomField>