force-app/main/default/objects/PurchaseOpportunity__c/fields/bunrui_num__c.field-meta.xml
<CustomField>
    <fullName>bunrui_num__c</fullName>
    <description>車検証情報入力タブで表示、車検証に記載の類別区分番号を入力する</description>
    <label>類別区分番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>