force-app/main/default/objects/PurchaseOpportunity__c/fields/BusinessHours__c.field-meta.xml
<CustomField>
    <fullName>BusinessHours__c</fullName>
    <inlineHelpText>HHMM-HHMMの形式で入力（例：0900-1800）</inlineHelpText>
    <label>営業時間</label>
    <length>50</length>
    <type>Text</type>
</CustomField>