force-app/main/default/objects/PurchaseOpportunity__c/fields/BusinessNegotiationCampaign__c.field-meta.xml
<CustomField>
    <fullName>BusinessNegotiationCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>佐野</description>
    <label>キャンペーン</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>買取商談</relationshipLabel>
    <relationshipName>NegotiationCampaign</relationshipName>
    <type>Lookup</type>
</CustomField>