force-app/main/default/objects/PurchaseOpportunity__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <description>山本</description>
    <formula>IF (  NOT(ISPICKVAL(Retail_Overseas_category__c ,&quot;小売&quot;)),PurchaseExperience__r.Buyer__c,&quot;&quot;)</formula>
    <label>売り先(営業実績)</label>
    <type>Text</type>
</CustomField>