force-app/main/default/objects/PurchaseOpportunity__c/fields/Called__c.field-meta.xml
<CustomField>
    <fullName>Called__c</fullName>
    <defaultValue>false</defaultValue>
    <description>引取依頼作成画面で表示、営業が引取依頼業者に連絡して既に日程を抑えている場合はチェックを付ける</description>
    <inlineHelpText>ゼロ/テイクオフへ引取日の予約が完了したらチェックをつけてください。</inlineHelpText>
    <label>電話連絡済み</label>
    <type>Checkbox</type>
</CustomField>