force-app/main/default/objects/PurchaseOpportunity__c/fields/CancelDate__c.field-meta.xml
<CustomField>
    <fullName>CancelDate__c</fullName>
    <description>フェーズをキャンセルにしたら自動でその日付が入力される</description>
    <inlineHelpText>未入力でフェーズがキャンセルの時、当日が自動的にセットされます。</inlineHelpText>
    <label>キャンセル日</label>
    <type>Date</type>
</CustomField>