force-app/main/default/objects/PurchaseOpportunity__c/fields/CancellationCount__c.field-meta.xml
<CustomField>
    <fullName>CancellationCount__c</fullName>
    <description>キャンセル案件をカウントするのに使用、キャンセル日が入力されている場合に1と表示される</description>
    <formula>IF(  ISPICKVAL( Phase__c ,&quot;キャンセル&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>キャンセルカウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>