force-app/main/default/objects/PurchaseOpportunity__c/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <description>案件キャンセルになった理由を入力する</description>
    <label>キャンセル理由</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IsCallCenter__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>修理の為</fullName>
            </value>
            <value>
                <fullName>他社</fullName>
            </value>
            <value>
                <fullName>全損の為</fullName>
            </value>
            <value>
                <fullName>依頼元不成約の為</fullName>
            </value>
            <value>
                <fullName>オークション</fullName>
            </value>
            <value>
                <fullName>他社売</fullName>
            </value>
            <value>
                <fullName>乗り続け</fullName>
            </value>
            <value>
                <fullName>買取不可</fullName>
            </value>
            <value>
                <fullName>連絡付かず・対応遅れ・遅延</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>