force-app/main/default/objects/PurchaseOpportunity__c/fields/car_type__c.field-meta.xml
<CustomField>
    <fullName>car_type__c</fullName>
    <description>現在使用していない</description>
    <label>型式(テキスト)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>