force-app/main/default/objects/PurchaseOpportunity__c/fields/CarForm__c.field-meta.xml
<CustomField>
    <fullName>CarForm__c</fullName>
    <description>引取依頼作成画面で表示、平ボディ、ダンプなどを選択する</description>
    <label>車輌形状</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>平ボディ</fullName>
            </value>
            <value>
                <fullName>ダンプ</fullName>
            </value>
            <value>
                <fullName>箱付き</fullName>
            </value>
            <value>
                <fullName>ホロ付き</fullName>
            </value>
            <value>
                <fullName>冷蔵冷凍車</fullName>
            </value>
            <value>
                <fullName>ウィング車</fullName>
            </value>
            <value>
                <fullName>タンク車</fullName>
            </value>
            <value>
                <fullName>ボトルカー</fullName>
            </value>
            <value>
                <fullName>クレーン付き</fullName>
            </value>
            <value>
                <fullName>高所作業車</fullName>
            </value>
            <value>
                <fullName>積載車</fullName>
            </value>
            <value>
                <fullName>トラクターヘッド</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>