force-app/main/default/objects/PurchaseOpportunity__c/fields/CarManagement__c.field-meta.xml
<CustomField>
    <fullName>CarManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>走行距離管理システムを通した場合はチェックを付ける</description>
    <label>走行距離管理システム</label>
    <type>Checkbox</type>
</CustomField>