force-app/main/default/objects/PurchaseOpportunity__c/fields/CarManagement_result__c.field-meta.xml
<CustomField>
    <fullName>CarManagement_result__c</fullName>
    <description>与儀</description>
    <label>走行距離管理システム結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>走行距離異常なし、出品歴なし</fullName>
            </value>
            <value>
                <fullName>走行距離異常なし、出品歴あり</fullName>
            </value>
            <value>
                <fullName>走行距離異常あり、出品歴なし</fullName>
            </value>
            <value>
                <fullName>走行距離異常あり、出品歴あり</fullName>
            </value>
            <value>
                <fullName>過去対応済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>