force-app/main/default/objects/PurchaseOpportunity__c/fields/CarName__c.field-meta.xml
<CustomField>
    <fullName>CarName__c</fullName>
    <description>過去に使用していた文字列を入力できる項目</description>
    <label>車名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>