force-app/main/default/objects/PurchaseOpportunity__c/fields/CarNo__c.field-meta.xml
<CustomField>
    <fullName>CarNo__c</fullName>
    <label>車台番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>