force-app/main/default/objects/PurchaseOpportunity__c/fields/CarryDate__c.field-meta.xml
<CustomField>
    <fullName>CarryDate__c</fullName>
    <inlineHelpText>未入力の時、引取日が自動的にセットされます。</inlineHelpText>
    <label>搬入日</label>
    <type>Date</type>
</CustomField>