force-app/main/default/objects/PurchaseOpportunity__c/fields/CarSize__c.field-meta.xml
<CustomField>
    <fullName>CarSize__c</fullName>
    <description>引取依頼作成画面で表示。引取依頼の場合、長さ6ｍ以上、幅2ｍ以上、高さ2.3ｍ以上、重量2.5ｔ以上は物流の段取にて手配が必要なため入力する</description>
    <inlineHelpText>引取依頼の場合、長さ6ｍ以上、幅2ｍ以上、高さ2.3ｍ以上、重量2.5ｔ以上は物流の段取にて手配</inlineHelpText>
    <label>削除予定_車輌サイズ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>