force-app/main/default/objects/PurchaseOpportunity__c/fields/CarTax__c.field-meta.xml
<CustomField>
    <fullName>CarTax__c</fullName>
    <description>自動車税相当額を入力する、入力している場合、支払合計に含まれる</description>
    <label>自動車税相当額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>