force-app/main/default/objects/PurchaseOpportunity__c/fields/CarTax_Excluded__c.field-meta.xml
<CustomField>
    <fullName>CarTax_Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>支払合計で自動車税相当額を含めない場合にチェックをつける</description>
    <label>自動車税相当額別</label>
    <type>Checkbox</type>
</CustomField>