force-app/main/default/objects/PurchaseOpportunity__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>買取受付から買取商談を作成した場合、買取受付Noが表示され作成元の買取受付を確認できる</description>
    <label>買取受付</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>買取商談</relationshipLabel>
    <relationshipName>CaseUnderOppotunity</relationshipName>
    <type>Lookup</type>
</CustomField>