force-app/main/default/objects/PurchaseOpportunity__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>IF( Estimate__c  &gt;= 2000000 , &quot;a200万円以上&quot;,
    IF( Estimate__c  &gt;= 1000000 ,&quot;b100～199万円&quot;,
       IF( Estimate__c  &gt;= 700000 ,&quot;c70～99万円&quot;,
         IF( Estimate__c  &gt;= 400000 ,&quot;d40～69万円&quot;,
           IF( Estimate__c  &gt;=100000 ,&quot;e10～39万円&quot;, 
             IF( AND(Estimate__c&gt;0 , Estimate__c &lt; 100000) ,&quot;f10万円未満&quot;, null ))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>削除予定_売り予想価格帯</label>
    <type>Text</type>
</CustomField>