force-app/main/default/objects/PurchaseOpportunity__c/fields/CharteredCarSlip__c.field-meta.xml
<CustomField>
    <fullName>CharteredCarSlip__c</fullName>
    <description>ゼロシステム連携した際にゼロ側から返される受注番号を引取依頼から転記</description>
    <label>ゼロ受注番号</label>
    <length>30</length>
    <type>Text</type>
</CustomField>