force-app/main/default/objects/PurchaseOpportunity__c/fields/chk_kskigen__c.field-meta.xml
<CustomField>
    <fullName>chk_kskigen__c</fullName>
    <description>OBICから連携される。山本</description>
    <label>公的書類期限</label>
    <type>Date</type>
</CustomField>