force-app/main/default/objects/PurchaseOpportunity__c/fields/ChukosyabuNyusatsu__c.field-meta.xml
<CustomField>
    <fullName>ChukosyabuNyusatsu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>中古車部等での入札会、または商談余地の無い案件の場合チェックをつける</description>
    <inlineHelpText>中古車部等での入札会、または商談余地の無い案件の場合チェック</inlineHelpText>
    <label>中古車部入札案件等</label>
    <type>Checkbox</type>
</CustomField>