force-app/main/default/objects/PurchaseOpportunity__c/fields/CollectDocument__c.field-meta.xml
<CustomField>
    <fullName>CollectDocument__c</fullName>
    <label>回収書類有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>なし</fullName>
                <default>true</default>
                <label>なし</label>
            </value>
            <value>
                <fullName>あり</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>