force-app/main/default/objects/PurchaseOpportunity__c/fields/Collection_documents__c.field-meta.xml
<CustomField>
    <fullName>Collection_documents__c</fullName>
    <description>与儀</description>
    <label>回収書類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>車検証</fullName>
            </value>
            <value>
                <fullName>リサイクル券</fullName>
            </value>
            <value>
                <fullName>自賠責</fullName>
            </value>
            <value>
                <fullName>取扱説明書</fullName>
            </value>
            <value>
                <fullName>メンテナンスノート</fullName>
            </value>
            <value>
                <fullName>保証書</fullName>
            </value>
            <value>
                <fullName>スペアキー</fullName>
            </value>
            <value>
                <fullName>譲渡証</fullName>
            </value>
            <value>
                <fullName>委任状</fullName>
            </value>
            <value>
                <fullName>印鑑証明書</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>