force-app/main/default/objects/PurchaseOpportunity__c/fields/Collection_documents_other__c.field-meta.xml
<CustomField>
    <fullName>Collection_documents_other__c</fullName>
    <description>与儀</description>
    <label>その他回収書類</label>
    <length>50</length>
    <type>Text</type>
</CustomField>