force-app/main/default/objects/PurchaseOpportunity__c/fields/Comment_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Comment_Logistics__c</fullName>
    <description>引取依頼で物流からの返答コメントが入る</description>
    <label>物流コメント【引取】</label>
    <type>TextArea</type>
</CustomField>