force-app/main/default/objects/PurchaseOpportunity__c/fields/Comment_Logistics_Forwarding__c.field-meta.xml
<CustomField>
    <fullName>Comment_Logistics_Forwarding__c</fullName>
    <description>回送依頼で物流からの返答コメントが入る</description>
    <label>物流コメント【回送】</label>
    <type>TextArea</type>
</CustomField>